<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/text_surname"
            style="@style/MyTextStyle1"
            android:text="@string/text_surname" />

        <EditText
            android:id="@+id/edit_text_surname"
            style="@style/MyTextStyle2"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/text_empty"
            android:autofillHints="" />

        <TextView
            android:id="@+id/text_name"
            style="@style/MyTextStyle1"
            android:text="@string/text_name" />

        <EditText
            android:id="@+id/edit_text_name"
            style="@style/MyTextStyle2"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/text_empty"
            android:autofillHints="" />

        <Button
            android:id="@+id/button_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/orange"
            android:onClick="addButtonClick"
            android:text="@string/button_add" />

        <Button
            android:id="@+id/button_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/orange"
            android:onClick="editButtonClick"
            android:text="@string/button_edit" />

        <Button
            android:id="@+id/button_delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/orange"
            android:onClick="deleteButtonClick"
            android:text="@string/button_delete" />

        <Button
            android:id="@+id/button_show"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/orange"
            android:onClick="showButtonClick"
            android:text="@string/button_show" />

        <ListView
            android:id="@+id/list_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:choiceMode="singleChoice" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>